<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="@dimen/margin_5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTodoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_title"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etToDoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_your_title"
            app:layout_constraintTop_toBottomOf="@id/tvTodoTitle" />


        <TextView
            android:id="@+id/tvTodoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/todo_description"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/etToDoTitle" />

        <EditText
            android:id="@+id/etToDoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_your_description"
            app:layout_constraintTop_toBottomOf="@id/tvTodoDescription" />

        <TextView
            android:id="@+id/tvSelectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/etToDoDescription" />

        <EditText
            android:id="@+id/etSelectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSelectDate" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSelectDate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>